Normal add take folder auth
